<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context="uz.sanjar.coursetaskapp.screens.OnBoardingScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginHorizontal="100dp"
            android:text="@string/coursesTitle"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/thousand_course_title_img"
            android:scaleType="fitXY"
            android:src="@drawable/courses"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        style="@style/AppButton"
        android:textAllCaps="false"
        android:text="@string/next"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="30dp"
        android:layout_height="40dp"/>
</FrameLayout>